--- a/notebooks/01-part-1.ipynb
+++ b/notebooks/01-part-1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "1"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "2"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "2"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "654"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "33583"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +187,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Installing package FSharp.Data.done!"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=============== S T A R T ==========================================\n",
+      ">>>> /home/jovyan/.nuget/packages/fsharp.data/3.3.2/typeproviders/fsharp41/netstandard2.0/FSharp.Data.DesignTime.dll\n",
+      ">>>> /home/jovyan/.nuget/packages/fsharp.data/3.3.2/lib/netstandard2.0/FSharp.Data.DesignTime.dll\n",
+      "Using: /home/jovyan/.nuget/packages/fsharp.data/3.3.2/typeproviders/fsharp41/netstandard2.0/FSharp.Data.DesignTime.dll\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>85644</td></tr><tr><td>1</td><td>52584</td></tr><tr><td>2</td><td>72349</td></tr><tr><td>3</td><td>83834</td></tr><tr><td>4</td><td>56593</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +257,7 @@
        "3311492"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +266,33 @@
     "let totalFuelNeeded (mass_values: int seq) : int =\n",
     "    mass_values |> Seq.map neededFuelForMass |> Seq.sum\n",
     "    \n",
-    "totalFuelNeeded mass_values"
+    "let result = totalFuelNeeded mass_values\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<null>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#r \"nuget:Expecto\"\n",
+    "    \n",
+    "open Expecto\n",
+    "\n",
+    "Expect.equal result 3311492 (sprintf \"Unexpected result: %A (Should be 3311492)\" result)"
    ]
   },
   {
