Tweaks day 01 notebook

--- a/notebooks/01-part-1.ipynb
+++ b/notebooks/01-part-1.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "let neededFuelForMass (m:int) : int =\n",
-    "    (m/3)-2"
+    "let neededFuel (mass:int) : int =\n",
+    "    (mass/3)-2"
    ]
   },
   {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -80,13 +80,13 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neededFuelForMass 12"
+    "neededFuel 12"
    ]
   },
   {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -107,13 +107,13 @@
        "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neededFuelForMass 14"
+    "neededFuel 14"
    ]
   },
   {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -134,13 +134,13 @@
        "654"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neededFuelForMass 1969"
+    "neededFuel 1969"
    ]
   },
   {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +161,13 @@
        "33583"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neededFuelForMass 100756"
+    "neededFuel 100756"
    ]
   },
   {
@@ -187,35 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Installing package FSharp.Data.done!"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=============== S T A R T ==========================================\n",
-      ">>>> /home/jovyan/.nuget/packages/fsharp.data/3.3.2/typeproviders/fsharp41/netstandard2.0/FSharp.Data.DesignTime.dll\n",
-      ">>>> /home/jovyan/.nuget/packages/fsharp.data/3.3.2/lib/netstandard2.0/FSharp.Data.DesignTime.dll\n",
-      "Using: /home/jovyan/.nuget/packages/fsharp.data/3.3.2/typeproviders/fsharp41/netstandard2.0/FSharp.Data.DesignTime.dll\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>85644</td></tr><tr><td>1</td><td>52584</td></tr><tr><td>2</td><td>72349</td></tr><tr><td>3</td><td>83834</td></tr><tr><td>4</td><td>56593</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,12 +210,12 @@
     "\n",
     "let input_data = CsvFile.Load(\"https://gitlab.com/turbohz/advent-of-code-2019/raw/master/notebooks/01-input-1.txt\")\n",
     "    \n",
-    "let mass_values = \n",
+    "let module_mass = \n",
     "     seq { for row in input_data.Rows do yield (row.GetColumn 0).AsInteger() }\n",
     "\n",
     "// Got what we need?\n",
     "\n",
-    "mass_values |> Seq.take 5"
+    "module_mass |> Seq.take 5"
    ]
   },
   {
@@ -248,41 +229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3311492"
+       "That's the right answer! You are one gold star closer to rescuing Santa."
       ]
      },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "let totalFuelNeeded (mass_values: int seq) : int =\n",
-    "    mass_values |> Seq.map neededFuelForMass |> Seq.sum\n",
-    "    \n",
-    "let result = totalFuelNeeded mass_values\n",
-    "\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<null>"
-      ]
-     },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,14 +248,23 @@
     "    \n",
     "open Expecto\n",
     "\n",
-    "Expect.equal result 3311492 (sprintf \"Unexpected result: %A (Should be 3311492)\" result)"
+    "let totalNeededFuel (mass_list: int seq) : int =\n",
+    "    mass_list |> Seq.map neededFuelForMass |> Seq.sum\n",
+    "\n",
+    "try \n",
+    "    let result = totalNeededFuel module_mass\n",
+    "    let expected = 3311492\n",
+    "    Expect.equal result expected (sprintf \"Unexpected result: %A (Should be %A)\" result expected)\n",
+    "    \"That's the right answer! You are one gold star closer to rescuing Santa.\"\n",
+    "with\n",
+    "    | ex -> ex.ToString()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> That's the right answer! You are one gold star closer to rescuing Santa. "
+    "> "
    ]
   }
  ],
