Completes notebook for day 02 part 1

--- a/notebooks/02-part-1.ipynb
+++ b/notebooks/02-part-1.ipynb
@@ -28,11 +28,11 @@
    "source": [
     "## Opcodes\n",
     "\n",
-    "### Opcode **99** (HALT)\n",
+    "### Opcode `99` (HALT)\n",
     "\n",
     "It means that the program is finished and should immediately halt. \n",
     "\n",
-    "### Opcode **1** (ADD)\n",
+    "### Opcode `1` (ADD)\n",
     "\n",
     "Adds together numbers read from two positions and stores the result in a third position. \n",
     "\n",
@@ -41,7 +41,7 @@
     "    - the first two indicate the positions from which you should read the input values\n",
     "    - the third indicates the position at which the output should be stored.\n",
     "\n",
-    "### Opcode **2** (MUL) \n",
+    "### Opcode `2` (MUL) \n",
     "\n",
     "It works exactly like **opcode 1**, except it multiplies the two inputs instead of adding them. \n",
     "\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
     "        |  1 -> ADD (mem.[ptr+1], mem.[ptr+2], mem.[ptr+3])\n",
     "        |  2 -> MUL (mem.[ptr+1], mem.[ptr+2], mem.[ptr+3])\n",
     "        | 99 -> HALT\n",
-    "        |  x -> failwith (sprintf \"Invalid opcode %A\" x)"
+    "        |  x -> failwith (sprintf \"Invalid opcode %A@%A\" x ptr)"
    ]
   },
   {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "<table><thead><tr><th>Item1</th><th>Item2</th><th>Item3</th><th>Tag</th><th>IsADD</th><th>IsMUL</th><th>IsHALT</th></tr></thead><tbody><tr><td>1</td><td>2</td><td>3</td><td>0</td><td>True</td><td>False</td><td>False</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "<table><thead><tr><th>Item1</th><th>Item2</th><th>Item3</th><th>Tag</th><th>IsADD</th><th>IsMUL</th><th>IsHALT</th></tr></thead><tbody><tr><td>1</td><td>2</td><td>3</td><td>1</td><td>False</td><td>True</td><td>False</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "<table><thead><tr><th>Tag</th><th>IsADD</th><th>IsMUL</th><th>IsHALT</th></tr></thead><tbody><tr><td>2</td><td>False</td><td>False</td><td>True</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,17 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "ename": "Unhandled exception",
-     "evalue": "Invalid opcode 10",
+     "evalue": "Invalid opcode 10@0",
      "output_type": "error",
      "traceback": [
-      "System.Exception: Invalid opcode 10",
-      "   at FSI_0026.readInstruction(Int32[] mem, Int32 ptr)",
-      "   at <StartupCode$FSI_0031>.$FSI_0031.main@()"
+      "System.Exception: Invalid opcode 10@0",
+      "   at FSI_0092.readInstruction(Int32[] mem, Int32 ptr)",
+      "   at <StartupCode$FSI_0096>.$FSI_0096.main@()"
      ]
     }
    ],
@@ -183,20 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>2</td></tr><tr><td>1</td><td>0</td></tr><tr><td>2</td><td>0</td></tr><tr><td>3</td><td>0</td></tr><tr><td>4</td><td>99</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "let rec runProgram (mem:Memory byref) (ptr:Address) : Unit =\n",
     "    \n",
@@ -226,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +224,7 @@
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>2</td></tr><tr><td>1</td><td>0</td></tr><tr><td>2</td><td>0</td></tr><tr><td>3</td><td>0</td></tr><tr><td>4</td><td>99</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +253,7 @@
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>2</td></tr><tr><td>1</td><td>3</td></tr><tr><td>2</td><td>0</td></tr><tr><td>3</td><td>6</td></tr><tr><td>4</td><td>99</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +282,7 @@
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>2</td></tr><tr><td>1</td><td>4</td></tr><tr><td>2</td><td>4</td></tr><tr><td>3</td><td>5</td></tr><tr><td>4</td><td>99</td></tr><tr><td>5</td><td>9801</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +311,7 @@
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>30</td></tr><tr><td>1</td><td>1</td></tr><tr><td>2</td><td>1</td></tr><tr><td>3</td><td>4</td></tr><tr><td>4</td><td>2</td></tr><tr><td>5</td><td>5</td></tr><tr><td>6</td><td>6</td></tr><tr><td>7</td><td>0</td></tr><tr><td>8</td><td>99</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,13 +326,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Input\n",
+    "\n",
+    "The input is provided as a long list of values separated by commas.\n",
+    "\n",
+    "We need to parse that first into and Array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>1</td></tr><tr><td>1</td><td>0</td></tr><tr><td>2</td><td>0</td></tr><tr><td>3</td><td>3</td></tr><tr><td>4</td><td>1</td></tr><tr><td>5</td><td>1</td></tr><tr><td>6</td><td>2</td></tr><tr><td>7</td><td>3</td></tr><tr><td>8</td><td>1</td></tr><tr><td>9</td><td>3</td></tr></tbody></table>"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let inputFilePath = \"./02-input-1.txt\"\n",
+    "\n",
+    "let input = System.IO.File.ReadAllLines(inputFilePath).[0].Split(\",\")\n",
+    "\n",
+    "Array.take 10 input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Problem\n",
     "\n",
     "Once you have a working computer, the first step is to restore the gravity assist program (your puzzle input) to the \"1202 program alarm\" state it had just before the last computer caught fire. \n",
     "\n",
-    "To do this, before running the program, replace position 1 with the value 12 and replace position 2 with the value 2. \n",
+    "To do this, before running the program, **replace position 1 with the value 12** and **replace position 2 with the value 2**. \n",
     "\n",
     "What value is left at position 0 after the program halts?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "That's the right answer! You are one gold star closer to rescuing Santa."
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#r \"nuget:Expecto\"\n",
+    "    \n",
+    "open Expecto\n",
+    "\n",
+    "let mutable mem = input |> Array.map (int)\n",
+    "\n",
+    "do \n",
+    "    mem.[1] <- 12\n",
+    "    mem.[2] <- 2\n",
+    "\n",
+    "try \n",
+    "    do runProgram &mem 0\n",
+    "    let result = mem.[0]\n",
+    "    let expected = 9706670\n",
+    "    Expect.equal result expected (sprintf \"Unexpected result: %A (Should be %A)\" result expected)\n",
+    "    \"That's the right answer! You are one gold star closer to rescuing Santa.\"\n",
+    "with\n",
+    "    | ex -> ex.ToString()"
    ]
   }
  ],
