Fixes day 01 part 1

--- a/notebooks/01-part-1.ipynb
+++ b/notebooks/01-part-1.ipynb
@@ -249,7 +249,7 @@
     "open Expecto\n",
     "\n",
     "let totalNeededFuel (mass_list: int seq) : int =\n",
-    "    mass_list |> Seq.map neededFuelForMass |> Seq.sum\n",
+    "    mass_list |> Seq.map neededFuel |> Seq.sum\n",
     "\n",
     "try \n",
     "    let result = totalNeededFuel module_mass\n",
