Tweaks day 1 to read local file
Allows playing with the notebook on Binder

--- a/notebooks/01-part-1.ipynb
+++ b/notebooks/01-part-1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "2"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "2"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "654"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "33583"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -196,26 +196,20 @@
        "<table><thead><tr><th><i>index</i></th><th>value</th></tr></thead><tbody><tr><td>0</td><td>85644</td></tr><tr><td>1</td><td>52584</td></tr><tr><td>2</td><td>72349</td></tr><tr><td>3</td><td>83834</td></tr><tr><td>4</td><td>56593</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#r \"nuget:FSharp.Data\"\n",
-    "    \n",
-    "open FSharp.Data\n",
+    "// Input data is personal\n",
     "\n",
-    "// Load personal(!) input values\n",
+    "let input_file_path = \"./01-input-1.txt\"\n",
+    "let input = System.IO.File.ReadAllLines(input_file_path) |> Seq.map(int)\n",
     "\n",
-    "let input_data = CsvFile.Load(\"https://gitlab.com/turbohz/advent-of-code-2019/raw/master/notebooks/01-input-1.txt\")\n",
-    "    \n",
-    "let module_mass = \n",
-    "     seq { for row in input_data.Rows do yield (row.GetColumn 0).AsInteger() }\n",
+    "// Got what we need ?\n",
     "\n",
-    "// Got what we need?\n",
-    "\n",
-    "module_mass |> Seq.take 5"
+    "input |> Seq.take 5"
    ]
   },
   {
@@ -229,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +232,7 @@
        "That's the right answer! You are one gold star closer to rescuing Santa."
       ]
      },
-     "execution_count": 40,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,19 +246,12 @@
     "    mass_list |> Seq.map neededFuel |> Seq.sum\n",
     "\n",
     "try \n",
-    "    let result = totalNeededFuel module_mass\n",
+    "    let result = totalNeededFuel input\n",
     "    let expected = 3311492\n",
     "    Expect.equal result expected (sprintf \"Unexpected result: %A (Should be %A)\" result expected)\n",
     "    \"That's the right answer! You are one gold star closer to rescuing Santa.\"\n",
     "with\n",
     "    | ex -> ex.ToString()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> "
    ]
   }
  ],
