--- a/notebooks/01-part-2.ipynb
+++ b/notebooks/01-part-2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "2"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "966"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "50346"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,20 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#r \"nuget:FSharp.Data\"\n",
-    "    \n",
-    "open FSharp.Data\n",
+    "// Input data is personal\n",
     "\n",
-    "// Load personal(!) input values\n",
-    "\n",
-    "let input_data = CsvFile.Load(\"https://gitlab.com/turbohz/advent-of-code-2019/raw/master/notebooks/01-input-1.txt\")\n",
-    "    \n",
-    "let module_mass = \n",
-    "     seq { for row in input_data.Rows do yield (row.GetColumn 0).AsInteger() }"
+    "let input_file_path = \"./01-input-1.txt\"\n",
+    "let input = System.IO.File.ReadAllLines(input_file_path) |> Seq.map(int)"
    ]
   },
   {
@@ -183,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +186,7 @@
        "That's the right answer! You are one gold star closer to rescuing Santa."
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +200,7 @@
     "    mass_list |> Seq.map (totalNeededFuel []) |> Seq.sum\n",
     "\n",
     "try \n",
-    "    let result = totalNeededFuel module_mass\n",
+    "    let result = totalNeededFuel input\n",
     "    let expected = 4964376\n",
     "    Expect.equal result expected (sprintf \"Unexpected result: %A (Should be %A)\" result expected)\n",
     "    \"That's the right answer! You are one gold star closer to rescuing Santa.\"\n",
